<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_linear_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="@color/colorPrimaryLight"
    android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--масса-->
            <TextView
                android:id="@+id/column_name_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:text="@string/product_weight"
                android:textStyle="bold"/>
            <!--Б-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:text="@string/protein"
                android:textStyle="bold"/>
            <!--Ж-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:text="@string/fats"
                android:textStyle="bold"/>
            <!--У-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:text="@string/carbs"
                android:textStyle="bold"/>
            <!--К-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:maxLines="1"
                android:ellipsize="marquee"
                android:text="@string/calories"
                android:textStyle="bold"/>
        </LinearLayout>
</LinearLayout>