<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--дата измерений-->
    <TextView
        android:id="@+id/last_measurement_date_measurement_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MontserratHeaderText"
        tools:text="3.12.2018"/>

    <TextView
        android:id="@+id/last_measurement_date_measurement_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/last_measurement_date_measurement_value"
        app:layout_constraintStart_toStartOf="@id/last_measurement_date_measurement_value"
        style="@style/RobotoMonoHintText"
        android:text="@string/last_measurements_date"/>

    <!--текущий вес-->
    <TextView
        android:id="@+id/current_weight_measurement_measurement_header"
        style="@style/RobotoMonoHintText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_weight_measurement_value"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/current_weight_measurement_value"
        style="@style/RobotoMonoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_measurement_date_measurement_header"
        app:layout_constraintWidth_percent="0.5"
        tools:text="47" />

    <!--целевой вес-->
    <TextView
        android:id="@+id/target_weight_header"
        style="@style/RobotoMonoHintText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/target_weight"
        app:layout_constraintStart_toEndOf="@+id/current_weight_measurement_measurement_header"
        app:layout_constraintTop_toBottomOf="@+id/target_weight_measurement_value"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/target_weight_measurement_value"
        style="@style/RobotoMonoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/current_weight_measurement_value"
        app:layout_constraintTop_toTopOf="@+id/current_weight_measurement_value"
        app:layout_constraintWidth_percent="0.5"
        tools:text="89" />
</androidx.constraintlayout.widget.ConstraintLayout>